2000-05-27  Not Zed  <NotZed@HelixCode.com>

	* vfoldertypes.xml: New file - lists rules appropriate for
	vfolders (no actions, etc).

	* Makefile.am (EXTRA_DIST): Add vfoldertypes.xml

	* filter-driver.c (filter_driver_expand_option): Made public from
	expand_filter_option.
	(filter_driver_rule_count): find out how many user rules are
	defined.
	(filter_driver_rule_get): Get a user rule by index.

2000-05-21  Ettore Perazzoli  <ettore@helixcode.com>

	* filter-druid.c: Don't pass an empty URL to `gtk_html_begin()'
	anymore.

	* filter-arg-types.c: Updated for the new GtkHTML API which uses
	`GtkHTMLStream *' instead of `GtkHTMLStreamHandle'.
	* filter-arg.c: Likewise.
	* filter-arg.h: Likewise.
	* filter-druid.c: Likewise.

	* filter-format.c: Likewise.
	* filter-format.h: Likewise.

2000-05-18  Dan Winship  <danw@helixcode.com>

	* filter-driver.c (filter_driver_run): update for
	camel_folder_get_uids change

2000-05-17  NotZed  <NotZed@HelixCode.com>

	* filter-druid.c: Fix some html formatting.

2000-05-16  NotZed  <NotZed@HelixCode.com>

	* filter-driver.c (filter_driver_run): Delete all processed
	messages.  This is probably going to slow it down a bit.
	(filter_driver_run): Close folders before destroying them *sigh*.
	(open_folder): Actually open the folder. Doh.

	* filtertypes.xml: Initial filter rules.

	* filter-xml.c (filter_write_optionset): Save the description
	also.
	(write_description): Routine to save description - only saves 1
	node of description.

	* filter-arg.c (filter_arg_edit_clicked): Dont free edata here,
	let the destroy do it(?)

	* filter-editor.c (main): Simple driver program for testing, so i
	can fix all this really broken code *sigh*

2000-05-15  NotZed  <NotZed@HelixCode.com>

	* filter-editor.c (filter_editor_set_rule_files): filename based
	interface.
	(filter_editor_save_rules): Interface to save the options to a
	filename.

	* filter-xml.[ch]: Bunch of cleanup.
