@@ -22,6 +22,13 @@
   <description lang="en">The Subject contains <source type="folder" name="words">words</source>.</description>
 </rule>
 
+<rule name="body-contains">
+  <code>
+   (match-all (body-contains ${words}))
+  </code>
+  <description lang="en">The body contains <source type="folder" name="words">words</source>.</description>
+</rule>
+
 <rule name="cc-address">
   <code>
     (match-all (header-contains "CC" ${self-email}))
@@ -72,6 +79,14 @@
   </code>
   <description language="en">When I am the receipient.</description>
 </rule>
+
+<rule name="not-body-contains">
+  <code>
+   (match-all (not (body-contains ${words})))
+  </code>
+  <description lang="en">The body does not contain <source type="folder" name="words">words</source>.</description>
+</rule>
+
 </ruleset>
 
 <optionset>
