@@ -21,6 +21,12 @@
   </code>
   <description lang="en">The Subject contains <source type="folder" name="words">words</source>.</description>
 </rule>
+<rule name="body-contains">
+  <code>
+   (match-all (body-contains ${words}))
+  </code>
+  <description lang="en">The body contains <source type="folder" name="words">words</source>.</description>
+</rule>
 
 <rule name="cc-address">
   <code>
@@ -37,6 +43,12 @@
     (match-all (not (header-contains "To" ${self-email})))
   </code>
   <description language="en">I am the receipient.</description>
+</rule>
+<rule name="not-body-contains">
+  <code>
+   (match-all (not (body-contains ${words})))
+  </code>
+  <description lang="en">The body does not contain <source type="folder" name="words">words</source>.</description>
 </rule>
 </ruleset>
 
